# claude-rust-desktop

./: check_conv.py  check_db_state.py  check_detail.py  check_final.py  check_logs.py  check_mem2.py  fix_filelog.py  package-lock.json  package.json  task1.md  test_body.json
.github/workflows/: build.yml
.trae/documents/: project-page-redesign-plan.md  project-workspace-plan.md
.trae/specs/sidebar-project-quick-edit/: checklist.md  spec.md  tasks.md
docs/superpowers/plans/: 2026-05-26-compact-conversation.md
docs/superpowers/specs/: 2026-05-25-claude-mem-memory-replacement-design.md
src/: App.tsx  api.ts  constants.ts
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bridge/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: memory_repo.rs  message_repo.rs  migration.rs  mod.rs  schema.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/native_engine/: engine_core.rs  provider_manager.rs  tool_loop.rs
src-tauri/src/orchestration/: test_scenario.rs
src-tauri/src/project/: mod.rs
src-tauri/src/research/: mod.rs
src/components/: AgentPanel.tsx  ChatsPage.tsx  DirectoryModal.tsx  MainContent.tsx  MemoryPanel.tsx  ModelSelector.tsx  PermissionModeSelector.tsx  ProjectsPage.tsx  ProviderSettings.tsx  SettingsPage.tsx  Sidebar.tsx  SwarmCollaboration.tsx
src/locales/: en.json  zh.json
src/stores/: useChatStore.ts
