[package]
name = "claude-desktop-tauri"
version = "2.0.0"
description = "Claude Desktop - AI assistant with native capabilities (Tauri Edition)"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-haptics = "2"
tauri-plugin-barcode-scanner = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "blocking", "system-proxy"], default-features = false }
axum = { version = "0.8", features = ["macros", "multipart"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
once_cell = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
async-trait = "0.1"
walkdir = "2"
glob = "0.3"
regex = "1"
open = "5"
urlencoding = "2"
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
enigo = "0.2"
base64 = "0.22"
windows = { version = "0.58", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
